--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node api/index.js\" \"parcel frontend/index.html\""
+    "start": "concurrently \"node api/index.js\" \"parcel frontend/index.html — open\"",
+    "build": "parcel build frontend/index.html",
+    "heroku-postbuild" : "parcel build frontend/index.html"
   },
   "author": "",
   "license": "ISC",
