--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"node api/index.js\" \"parcel frontend/index.html — open\"",
-    "build": "parcel build frontend/index.html",
-    "heroku-postbuild" : "parcel build frontend/index.html"
+    "build": "parcel frontend/index.html",
+    "heroku-postbuild" : "parcel frontend/index.html"
   },
   "author": "",
   "license": "ISC",
